# ckpool-lhr

./: .gitignore  DIFFERENCES.md  FAQ.md  MERGE_ANALYSIS.md  Makefile.am  README  README-INSTALL-SCRIPT  README-INSTALL-SCRIPT.md  README-NODE  README-PASSTHROUGH  README-POOL  README-PROXY  README-REDIRECTOR  README-SOLO  README-SOLOMINING  README-USERPROXY  README.md  TESTING_STRATEGY.md  cknode.conf.example  ckpassthrough.conf.example  ckpool.conf  ckpool.conf.example  ckredirector.conf.example  configure.ac
.github/workflows/: codeql.yml
contrib/: ckpoolctl.sh
scripts/: install-ckpool-solo.sh  pp_proxy.py
src/: Makefile.am  ckpool.c  ckpool.h  connector.c  connector.h  generator.c  libckpool.c  libckpool.h  sha2.c  stratifier.c  stratifier.h  stratifier_internal.h  ua_utils.c  ua_utils.h  worker_ua.c  worker_ua.h
src/jansson-2.14/src/: Makefile.am
src/sha256_code_release/: sha256_avx1.asm  sha256_avx2_rorx2.asm  sha256_sse4.asm
tests/: .gitignore  Makefile.am  README.md  TESTING_STATUS.md  test_common.h
tests/integration/: README.md
tests/unit/: test-address.c  test-adjustment-hysteresis.c  test-auth-rejection.c  test-backwards-compatibility.c  test-base58.c  test-base64.c  test-config.c  test-difficulty.c  test-donation.c  test-dropidle.c  test-encoding.c  test-endian.c  test-fractional-config.c  test-fractional-stats  test-fractional-stats.c  test-fractional-vardiff  test-fractional-vardiff.c  test-fulltest.c  test-logmsg.c  test-low-diff.c  test-network-diff-interactions.c  test-password-diff-job-id.c  test-password-diff.c  test-persistent-ua-tracking.c  test-proxy-protocol.c  test-serialization.c  test-sha256.c  test-share-orphan-prevention.c  test-share-params.c  test-string-utils.c  test-time-conversion.c  test-time-utils.c  test-ua-aggregation.c  test-useragent.c  test-vardiff-comprehensive.c  test-vardiff.c  test-worker-ua-recalc.c  test-zombie-cleanup-integration.c  test-zombie-cleanup.c
